# taproot-assets-rs

./: .gitignore  .gitmodules  AGENTS.md  Cargo.toml  Makefile  README.md  dprint.json
docs/: zk-proof-verification-plan.md
taproot-assets/: Cargo.toml  README.md
taproot-assets-core/: Cargo.toml  README.md
taproot-assets-core/src/: lib.rs
taproot-assets-core/src/verify/: group_key_reveal.rs  mod.rs  proof.rs  taproot_proof.rs  tx.rs
taproot-assets-core/tests/: proof_vectors.rs
taproot-assets-rpc/: Cargo.toml  LICENSE-MIT  README.md  build.rs
taproot-assets-rpc/src/: client.rs  convert.rs  lib.rs
taproot-assets-rpc/src/client/: tests.rs
taproot-assets-types/: Cargo.toml  README.md
taproot-assets-types/src/: asset.rs  commitment.rs  error.rs  lib.rs  mssmt.rs  proof.rs  tlv.rs
taproot-assets/src/: lib.rs  verify.rs
zk/guests/anchor-claim-prover/: Cargo.toml
zk/guests/anchor-claim-prover/src/: main.rs
zk/guests/asset-claim-prover/: Cargo.toml
zk/guests/asset-claim-prover/src/: main.rs
zk/guests/join-prover/: Cargo.toml
zk/guests/join-prover/src/: main.rs
zk/guests/mint-prover/: Cargo.toml
zk/guests/mint-prover/src/: main.rs
zk/guests/proof-chain-claim-prover/: Cargo.toml
zk/guests/proof-chain-claim-prover/src/: main.rs
zk/guests/stxo-claim-prover/: Cargo.toml
zk/guests/stxo-claim-prover/src/: main.rs
zk/guests/taproot-commitment-prover/: Cargo.toml
zk/guests/taproot-commitment-prover/src/: main.rs
zk/taproot-assets-zk-core/: Cargo.toml  README.md
zk/taproot-assets-zk-core/src/: lib.rs
zk/taproot-assets-zk-core/src/verify/: join.rs  mod.rs  proof.rs  proof_chain.rs  tx.rs  zk_proof_file.rs
zk/taproot-assets-zk-verifier/: Cargo.toml  LICENSE-MIT  README.md
zk/taproot-assets-zk-verifier/src/: join.rs  lib.rs  zk_proof_file.rs
zk/taproot-assets-zk-verifier/tests/: proof_chain_claim.rs  zk_parity.rs
