[workspace]
resolver = "2"
members = [
  "taproot-assets",
  "taproot-assets-rpc",
  "taproot-assets-types",
  "zk/guests/mint-prover",
  "zk/taproot-assets-zk-core",
  "zk/taproot-assets-zk-verifier",
]

[workspace.package]
version = "0.0.1"
edition = "2021"
license = "MIT OR Apache-2.0"
publish = false
repository = "https://github.com/ffranr/taproot-assets-rs"
