[package]
name = "taproot-assets-core"
version = "0.0.2"
edition = "2024"
publish = true

categories = ["cryptography", "cryptography::cryptocurrencies"]
keywords = ["bitcoin", "taproot", "assets", "verification", "zk"]
description = "Core no-std logic and verification primitives for Taproot Assets"

license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/ffranr/taproot-assets-rs"

[features]
default = []

[dependencies]
bitcoin = { version = "0.32.6", default-features = false, features = ["serde"] }
serde = { version = "1.0", default-features = false, features = ["derive", "alloc"] }
taproot-assets-types = { version = "0.0.2", path = "../taproot-assets-types" }
thiserror = { version = "2.0.12", default-features = false }

[dev-dependencies]
hex = "0.4"
serde_json = "1.0"
