[package]
name = "taproot-assets-rpc"
version = "0.0.2"
edition = "2024"
publish = true

categories = ["cryptography::cryptocurrencies"]
keywords = ["bitcoin", "taproot", "assets", "lightning", "rpc"]
description = "Taproot Assets gRPC client"

license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/ffranr/taproot-assets-rs"

# Exclude source proto files from the published crate.
exclude = ["proto/**"]

[features]
default = []
build-protos = ["dep:tonic-build"] # Enables local proto regeneration

[dependencies]
taproot-assets-types = { version = "0.0.2", path = "../taproot-assets-types" }

bitcoin = "0.32.6"

prost = "0.13.1"
tonic = { version = "0.13.1", default-features = false, features = ["transport", "codegen", "channel", "tls-native-roots", "prost"] }

bincode = { version = "2.0.1", features = ["serde"] }
hex = "0.4"
serde = { version = "1.0.219", features = ["derive"] }
thiserror = "2.0.12"

hyper = { version = "1", features = ["http2"] }
hyper-rustls = { version = "0.27", default-features = false, features = ["http2", "ring"] }
hyper-util = { version = "0.1", features = ["client", "http2", "tokio"] }
rustls = { version = "0.23", default-features = false, features = ["ring"] }

tokio = { version = "1.37", features = ["macros", "rt-multi-thread"] }

env_logger = "0.11.8"
log = "0.4.27"

[build-dependencies]
tonic-build = { version = "0.13.1", optional = true }
