[package]
name = "taproot-assets"
version = "0.0.2"
edition = "2024"
publish = true

categories = ["cryptography::cryptocurrencies"]
keywords = ["bitcoin", "taproot", "assets", "lightning", "sdk"]
description = "High-level Rust SDK bundling Taproot-Asset types, RPC client, and more."

license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/ffranr/taproot-assets-rs"

[dependencies]
bitcoin = { version = "0.32.6", default-features = false }
taproot-assets-core = { version = "0.0.2", path = "../taproot-assets-core" }
taproot-assets-rpc = { version = "0.0.2", path = "../taproot-assets-rpc", optional = true }
taproot-assets-types = { version = "0.0.2", path = "../taproot-assets-types" }
tokio = { version = "1.37", features = ["macros", "rt-multi-thread"] }

[features]
default = ["rpc", "std"]
std = []
rpc = ["dep:taproot-assets-rpc"]
