[package]
name = "taproot-assets-zk-verifier"
version = "0.0.2"
edition = "2024"
publish = true

categories = ["cryptography", "cryptography::cryptocurrencies"]
keywords = ["bitcoin", "taproot", "zkp", "verifier", "proofs"]
description = "Rust verifier for Taproot Assets zero-knowledge proofs"

license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/ffranr/taproot-assets-rs"

[dependencies]
taproot-assets-rpc = { version = "0.0.2", path = "../../taproot-assets-rpc" }
taproot-assets-types = { version = "0.0.2", path = "../../taproot-assets-types" }
taproot-assets-zk-core = { version = "0.0.2", path = "../../zk/taproot-assets-zk-core" }
taproot-assets-core = { version = "0.0.2", path = "../../taproot-assets-core" }

bitcoin = "0.32.6"

risc0-zkvm = { version = "3.0.4", features = ["prove", "client"] }

bincode = { version = "2.0.1", features = ["serde"] }
serde = "1.0"

hex = "0.4"
rand = "0.9.1"

anyhow = "1.0"
rayon = "1.10"

[dev-dependencies]
taproot-assets = { version = "0.0.2", path = "../../taproot-assets" }

[[bin]]
name = "run_anchor_claim"
path = "src/bin/run_anchor_claim.rs"

[[bin]]
name = "run_join"
path = "src/bin/run_join.rs"

[[bin]]
name = "run_asset_claim"
path = "src/bin/run_asset_claim.rs"
