[package]
name = "mint-prover"
version = "0.0.1"
edition = "2021"

# Guest ELF never goes to crates.io.
publish = false

[dependencies]
taproot-assets-types = { path = "../../../taproot-assets-types" }
taproot-assets-zk-core = { path = "../../taproot-assets-zk-core" }

bitcoin = { version = "0.32.6", default-features = false, features = ["serde"] }
risc0-zkvm = { version = "2.0.2", default-features = false }
serde = { version = "1.0", default-features = false, features = ["derive", "alloc"] }

[features]
default = []

# Smaller code size / deterministic output.
[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
strip = true
